<resources>
    <string name="app_name">DatabaseApp</string>
    <string name="welcome_to_the_car_customer_database">Welcome to the Car Dealer Database</string>
    <string name="you_have_the_option_of_adding_deleting_updating_and_viewing_in_the_database">You have the option of adding, deleting, updating, and viewing in the database</string>
    <string name="add_customer">Add Customer</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="update_customer">Update Customer</string>
    <string name="view_all_customers_data">View All Customers Data</string>
    <string name="enter_the_customer_first_name_last_name_car_make_and_cost">Enter the customer first name, last name, car make, and cost then click ADD!</string>
    <string name="add">Add</string>
    <string name="enter_the_id_of_the_customer_you_want_to_delete">Enter the ID of the Customer you want </string>
    <string name="delete">Delete</string>
    <string name="view_database">View Database</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="click_here_to_add_a_customer">Click here to Add a customer!</string>
    <string name="click_here_to_delete_a_customer">Click here to Delete a customer!</string>
    <string name="click_here_to_update_a_customer">Click here to Update a customer!</string>
    <string name="click_here_to_view_the_database">Click here to View the database</string>
    <string name="enter_the_first_name_last_name_car_make_and_cost_then_click_add_n_you_may_add_as_many_customers_as_you_want">Enter the first name, last name, car make, and cost then click ADD. \n you may add as many customers as you want!</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_car_make">Enter Car Make</string>
    <string name="enter_cost">Enter Cost</string>
    <string name="addData">Add</string>
    <string name="click_here_to_view_current_database">Click here to view current database</string>
    <string name="view">View</string>
    <string name="lt_return_to_main_page"><![CDATA[<- Return to Main]]></string>
    <string name="enter_the_customer_id_and_click_delete_this_will_delete_all_information_for_that_customer_click_the_view_button_to_identify_the_id_of_the_customer_you_want_to_delete">Enter the customer ID and click DELETE! This will delete all information for that customer. Click the VIEW button to identify the ID of the customer you want to delete!</string>
    <string name="enter_id">Enter ID</string>
    <string name="delete_button">Delete</string>
    <string name="click_here_to_view_database">Click here to view the current database</string>
    <string name="view_buttonInDelete">View</string>
    <string name="lt_return_to_main"><![CDATA[<- Return to Main]]></string>
    <string name="enter_the_id_of_the_customer_you_want_to_update_fill_in_all_fields_with_current_and_new_information_make_sure_it_is_the_correct_id">Enter the ID of the customer you want to update, click UPDATE, then fill in the other fields with current and new information! Make sure it is the correct ID!</string>
    <string name="id_inUpdate">Enter ID</string>
    <string name="enter_firstInUpdate">Enter First Name</string>
    <string name="enter_lastInUpdate">Enter Last Name</string>
    <string name="enter_carMakeInUpdate">Enter Car Make</string>
    <string name="enter_costInUpdate">Enter Cost</string>
    <string name="update_inUpdate">update</string>
    <string name="click_here_to_view_inUpdate">Click here to view the current database</string>
    <string name="view_inUpdate">View</string>
    <string name="lt_return_fromUpdate"><![CDATA[<- Return to Main]]></string>
</resources>
