<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.databaseapp.AddActivity"
    android:background="#cc0000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_the_first_name_last_name_car_make_and_cost_then_click_add_n_you_may_add_as_many_customers_as_you_want"
        android:id="@+id/textView_Add_instruction"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="#000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_First_txt"
        android:hint="@string/enter_first_name"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_Last_txt"
        android:hint="@string/enter_last_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Make_txt"
        android:hint="@string/enter_car_make" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_Cost_txt"
        android:hint="@string/enter_cost" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addData"
        android:id="@+id/button_addData"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_view_current_database"
        android:id="@+id/textView_viewInADD"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="16sp"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/button_viewInADD"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lt_return_to_main_page"
        android:id="@+id/button_returnFromAdd"
        android:layout_marginTop="30dp"
        android:textColor="#000000" />

</LinearLayout>