<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.databaseapp.MainActivity"
    android:background="#cc0000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_to_the_car_customer_database"
        android:id="@+id/textView_Welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_add_a_customer"
        android:id="@+id/textView_add"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_customer"
        android:id="@+id/button_addData"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_delete_a_customer"
        android:id="@+id/textView_delete"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_customer"
        android:id="@+id/button_delete_cus"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_update_a_customer"
        android:id="@+id/textView_update"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_customer"
        android:id="@+id/button_update"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_view_the_database"
        android:id="@+id/textView_view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_customers_data"
        android:id="@+id/button_view_all"
        android:layout_marginBottom="52dp"
        android:textColor="#000000" />

</LinearLayout>
