<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.databaseapp.DeleteActivity"
    android:background="#cc0000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_the_customer_id_and_click_delete_this_will_delete_all_information_for_that_customer_click_the_view_button_to_identify_the_id_of_the_customer_you_want_to_delete"
        android:id="@+id/textView_Delete_Instruction"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_ID_txt"
        android:hint="@string/enter_id"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"
        android:id="@+id/button_delete_cus"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_view_database"
        android:id="@+id/textView_viewInDelete"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_buttonInDelete"
        android:id="@+id/button_viewInDelete"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lt_return_to_main"
        android:id="@+id/button_ReturnFromDelete"
        android:layout_marginTop="100dp"
        android:textColor="#000000" />

</LinearLayout>